# wg-telefon

./: .gitignore  Cargo.toml  config.toml  shell.nix
.cargo/: config.toml
audio/: Cargo.toml
audio/src/: lib.rs
client/: .gitignore  Cargo.toml  audio.h  readmicrophone.c  writespeaker.c
client/src/: main.rs
protocol/src/: audio_buffer.rs  cowconnect.rs  lib.rs
server/src/: con_man.rs  main.rs
src/: lib.rs  main.rs
udp/src/: audio_buffer.rs  con_man.rs  cowconnect.rs  main.rs
