[package]
name = "audio"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
gpio = []

[dependencies]
anyhow = "1.0.66"
clap = "4.0.18"
cpal = { version = "0.14.1" }
ringbuf = "0.3.1"
